fixed whitespace on top of page

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -69,6 +69,12 @@
   left: 0;
 }
 
+
+.text-page {
+  padding-top:100px;
+}
+
+
 table {
   width: 350px;
 
